# translator

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN_gemini.md  README.md  general_prompt.md  glossary.md  plan_claude.md  plan_claude_2.md  plan_claude_new.md  plan_codex_quality.md  plan_gpt.md  pyproject.toml  report_1.json  translation_cache.sqlite-shm  translation_cache.sqlite-wal  translation_cache.sqlite.bak-20260226T074638Z-shm  translation_cache.sqlite.bak-20260226T074638Z-wal  translation_cache.sqlite.corrupt-20260223T165357Z
config/: config.agent_openai.yaml  config.cli.gpt5mini.checker-batch.prev-sequential.yaml  config.cli.gpt5mini.checker-batch.yaml  config.eval.ollama.local.yaml  config.example.yaml  config.google.yaml  config.max_quality_aviation.yaml  config.ollama.hy-mt.yaml  pricing.example.yaml  regex_presets.yaml
docs/: MASTER_PLAN.md  MAX_QUALITY_PROFILE.md  SPEC_v2.md  architecture.md  benchmark_baseline.md
samples/: 32-12-22_pn201587001,201587002_R.69_SAFRAN (1-469) — abby_short.docx  32-12-22_pn201587001,201587002_R.69_SAFRAN (1-469) — abby_short_2.docx  32-12-22_pn201587001,201587002_R.69_SAFRAN (1-469) — abby_short_3.docx  32-12-22_pn201587001,201587002_R.69_SAFRAN (1-469) — копия.docx  32-12-22_pn201587001,201587002_R.69_SAFRAN_part1_Short.docx  mini.docx  test_1.docx  test_11.docx  test_12.docx
scripts/: compare_docx_pages.py  merge_docx_sections.py  migrate_tm_profile.py  render_docx_pages.py  tm_lookup.py
tests/: test_batch_mode.py  test_checker.py  test_cli.py  test_com_word.py  test_config_defaults.py  test_consistency.py  (+33 more)
(+50 files in other folders)
